# ollama-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.py
.cursor/: mcp.json.example
.github/workflows/: test.yml
scripts/: run_integration_tests.py
src/ollama_mcp/: __init__.py
tests/: conftest.py  test_streaming.py  test_tools_unit.py
